# Maillet

./: .env.example  .eslintrc.cjs  .gitignore  CLAUDE.md  Dockerfile  LICENSE  QUICKSTART.md  QUICKSTART_PART1.md  QUICKSTART_PART2.md  QUICKSTART_PART3.md  README.md  docker-compose.yml  index.html  netlify.toml  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy.yml  test.yml
app/api/: __init__.py  main.py
app/cli/: commands.py
app/database/: connection.py
app/gmail/: auth.py  client.py  parser.py
app/models/: transaction.py
app/security/: rate_limiter.py  sanitizer.py  validators.py
app/services/: aggregation_service.py  transaction_service.py
docs/: E2E_TEST_READINESS_REPORT.md  PHASE1_DEMO_REPORT.md  PHASE2_TEST_REPORT.md  PHASE3_REGRESSION_REPORT.md  PHASE4_FINAL_REGRESSION_REPORT.md  PHASE4_REGRESSION_REPORT.md  SETUP_TESTING.md  architecture.md  code_survey.md  deploy.md  design_concept_v3.md  design_document.md  improvement_ideas.md  monitoring.md  oauth_setup_for_docker.md  privacy_architecture.md  roadmap.md  spa_migration_design.md  test_plan.md  web_ui_design.md
public/: 404.html
scripts/: generate-icons.mjs  test-docker.sh
src/: main.tsx
tests/: test_aggregation.py  test_api.py  test_auth.py  test_cli.py  test_database.py  test_duplicate_detection.py  test_e2e.py  test_edge_cases.py  test_gmail_client.py  test_models.py  test_parser_amex.py  test_parser_amount_extraction.py  test_parser_dcard.py  test_parser_fallback.py  test_parser_foundation.py  test_security.py
(+151 files in other folders)
